NIFI-12103 - URL(String) in URL has been deprecated