@@ -48,7 +48,7 @@ public abstract class AbstractNiFiProvenanceEventAnalyzer implements NiFiProvena
      */
     protected URL parseUrl(String url) {
         try {
-            return new URL(url);
+            return URI.create(url).toURL();
         } catch (MalformedURLException e) {
             final String msg = String.format("Failed to parse url %s due to %s", url, e);
             throw new IllegalArgumentException(msg, e);
