@@ -336,7 +336,7 @@ public abstract class AbstractAWSGatewayApiProcessor extends
                     // but we may need to when validating
                     final String encodedInput = URLEncoder.encode(evaluatedInput, "UTF-8");
                     final String url = String.format("http://www.foo.com?%s", encodedInput);
-                    new URL(url);
+                    URI.create(url).toURL();
                     results.add(new ValidationResult.Builder().subject(PROP_QUERY_PARAMS.getName())
                                                               .input(input)
                                                               .explanation("Valid URL params")
