@@ -41,6 +41,7 @@ import org.springframework.security.oauth2.core.oidc.user.OidcUser;
 import javax.servlet.ServletContext;
 import javax.servlet.http.Cookie;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import java.time.Duration;
 import java.time.Instant;
@@ -204,7 +205,7 @@ class OidcAuthenticationSuccessHandlerTest {
 
     URL getIssuer() {
         try {
-            return new URL(ISSUER);
+            return URI.create(ISSUER).toURL();
         } catch (final MalformedURLException e) {
             throw new RuntimeException(e);
         }
